--- a/exec.yml
+++ b/exec.yml
@@ -1,5 +1,4 @@
 - hosts: localhost
   connection: local
-  gather_facts: no
   roles:
-    - brew
+    - { role: brew, when: "ansible_os_family == 'Darwin'" }
