add integration for CI
fix syntax error

use system python in macos

fix python symlink

fix conditions

bre update first

remove depricated formula

only execute ansible-lint on macos

save log file into current dir

fix ci bug

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = ./hosts
 roles_path = ./roles/
-log_path = ~/Library/Logs/ansible.log
+log_path = ./ansible.log
 gathering = smart
 retry_files_enabled = False
