--- a/.travis.yml
+++ b/.travis.yml
@@ -42,6 +42,7 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" && "$PYTHON_VER" == "3" ]]; then brew upgrade python ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" && "$PYTHON_VER" == "2" ]]; then brew unlink python ; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install ansible ansible-lint ; else sudo apt-get install -y ansible ; fi
+  - if [[ "$TRAVIS_OS_NAME" != "osx" ]]; then sudo apt-get install -y software-properties-common && sudo apt-add-repository ppa:ansible/ansible -y && sudo apt-get update && sudo apt-get install -y ansible ; fi
 
 script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ansible-lint exec.yml ; fi
