--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,14 @@ matrix:
       dist: trusty
       sudo: required
       python: 2.7
+      env:
+        PYTHON_VER=2
     - os: linux
       dist: trusty
       sudo: required
       python: 3.6
+      env:
+        PYTHON_VER=3
     - os: osx
       language: generic
       osx_image: xcode9.2
@@ -35,6 +39,7 @@ cache:
   ccache: true
   directories:
     - $HOME/Library/Caches/Homebrew
+    - $HOME/Library/Caches/Homebrew/Cask
   apt: true
 
 before_install:
@@ -46,5 +51,5 @@ before_install:
 
 script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ansible-lint exec.yml ; fi
-  - if [[ $(which python3) ]]; then ansible-playbook exec.yml -e ansible_python_interpreter=$(which python3) ; else ansible-playbook exec.yml ; fi
+  - if [[ "$PYTHON_VER" == "3" ]]; then ansible-playbook exec.yml -e ansible_python_interpreter=$(which python3) ; else ansible-playbook exec.yml ; fi
 
