--- a/exec.yml
+++ b/exec.yml
@@ -1,7 +1,10 @@
 - hosts: localhost
   connection: local
+  strategy: debug
+  debugger: on_failed
   roles:
     - { role: install_brew, when: 'ansible_os_family == "Darwin"' }
     - { role: brew, when: 'ansible_os_family == "Darwin"' }
     - { role: dotfiles }
+    - { role: fish, when: 'ansible_os_family == "Darwin"' }
 
