--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -1,12 +1,12 @@
 - name: git clone dotfiles
   git:
     repo: https://github.com/pddg/dotfiles
-    dest: ~/dotfiles
+    dest: '{{ dotfiles_repo }}'
     update: no
 
 - name: Create symbolic link
   file:
-    src: ~/dotfiles/{{ item }}
+    src: '{{ dotfiles_repo }}/{{ item }}'
     dest: ~/{{ item }}
     state: link
     force: yes
