--- a/exec.yml
+++ b/exec.yml
@@ -7,4 +7,5 @@
     - { role: brew, when: 'ansible_os_family == "Darwin"' }
     - { role: dotfiles }
     - { role: fish, when: 'ansible_os_family == "Darwin"' }
+    - { role: anyenv }
 
