--- a/roles/fish/tasks/main.yml
+++ b/roles/fish/tasks/main.yml
@@ -13,20 +13,27 @@
   with_items:
     - '{{ fish_config_files }}'
 
-- name: Check fisher command exists
-  stat: path=~/.config/fish/functions/fisher.fish
-  register: is_fisher_exists
-
-- name: Install fisherman
-  shell: curl -Lo ~/.config/fish/functions/fisher.fish --create-dirs https://git.io/fisher
-  when: not is_fisher_exists.stat.exists
-
 - name: Obtain path to fish
   shell: which fish
   register: fish_path
   changed_when: false
+  check_mode: no
+
+- name: Set ansible_shell_executable to fish
+  set_fact:
+    ansible_shell_executable: '{{ fish_path.stdout }}'
+    ansible_shell_type: fish
+
+- name: Install fisherman
+  get_url:
+    url: https://git.io/fisher
+    dest: ~/.config/fish/functions/fisher.fish
+  register: download_result
+  until: download_result is succeeded
+  retries: 3
+  delay: 5
 
 - name: Install fish plugins
-  shell: fish_path --command fisher
+  shell: fisher
   changed_when: false
   
