add set up for osx_defaults

--- a/exec.yml
+++ b/exec.yml
@@ -7,5 +7,6 @@
     - { role: brew, when: 'ansible_os_family == "Darwin"' }
     - { role: dotfiles }
     - { role: fish, when: 'ansible_os_family == "Darwin"' }
-    - { role: anyenv }
+    - { role: anyenv, when: 'ansible_os_family == "Darwin"'}
+    - { role: macos, when: 'ansible_os_family == "Darwin"' }
 
