enable build option for pyenv

--- a/roles/anyenv/vars/main.yml
+++ b/roles/anyenv/vars/main.yml
@@ -1,6 +1,6 @@
 python_versions:
-  - 3.6.2
-  - 2.7.14
-  - miniconda3-4.3.11
+  - { version: 3.6.2, option: --enable-framework }
+  - { version: 2.7.14, option: --disable-framework }
+  - { version: miniconda3-4.3.11, option: --disable-framework }
 
 
