--- a/roles/anyenv/tasks/main.yml
+++ b/roles/anyenv/tasks/main.yml
@@ -13,6 +13,7 @@
   git:
     repo: https://github.com/riywo/anyenv.git
     dest: ~/.anyenv
+    version: master
 
 - name: Add init script of anyenv to config.fish
   lineinfile:
@@ -25,18 +26,23 @@
 - name: Install pyenv
   shell: anyenv install pyenv
   args:
-    creates: ~/.ansible/env/pyenv/bin/pyenv
+    creates: ~/.ansible/envs/pyenv/bin/pyenv
+
+- name: Install pyenv-virtualenv
+  git:
+    repo: https://github.com/yyuu/pyenv-virtualenv.git
+    dest: ~/.anyenv/envs/pyenv/plugins/pyenv-virtualenv
+    version: master
 
 - name: Install python
-  shell: pyenv install '{{ item }}'
+  shell: pyenv install '{{ item.version }}'
   args:
-    creates: '~/.anyenv/envs/pyenv/versions/{{ item }}'
+    creates: '~/.anyenv/envs/pyenv/versions/{{ item.version }}'
+  environment:
+    PYTHON_CONFIGURE_OPTS: '{{ item.option }}'
   with_items:
     - '{{ python_versions }}'
   when: python_versions is defined
   notify:
     - pyenv_rehash
-
-
-
 
