--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -1,6 +1,6 @@
 github_user: pddg
 github_email: s.kokuryo@gmail.com
-ghq_root: ~/ghq
+ghq_root: '{{ lookup("env","HOME") }}/ghq'
 repos_root: '{{ ghq_root }}/github.com/{{ github_user }}'
 dotfiles_repo: '{{ ghq_root }}/dotfiles'
 
