--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,3 +4,5 @@ roles_path = ./roles/
 log_path = ./ansible.log
 gathering = smart
 retry_files_enabled = False
+callback_whitelist = skippy
+stdout_callback = skippy
