--- a/roles/anyenv/tasks/main.yml
+++ b/roles/anyenv/tasks/main.yml
@@ -21,5 +21,5 @@
     line: "{{ item }}"
   with_items:
     - set -x PATH $HOME/.anyenv/bin $PATH
-    - eval (anyenv init - fish)
+    - . (anyenv init - fish | psub)
 
