--- a/roles/font/tasks/main.yml
+++ b/roles/font/tasks/main.yml
@@ -16,17 +16,10 @@
   vars:
     ansible_python_interpreter: python3
 
-- name: Create dir to unzip
-  file:
-    path: {{ item|basename|splitext|first }}
-	state: directory
-  with_fileglob:
-    ~/.Documents/fonts/*.zip
-
 - name: Unzip archive
   unarchive:
     src: '{{ item }}'
-    dest: '~/Documents/fonts/{{ item|basename|splitext|first }}'
+    dest: '~/Documents/fonts/'
     remote_src: yes
   with_fileglob:
     - ~/Documents/fonts/*.zip
