--- a/exec.yml
+++ b/exec.yml
@@ -11,6 +11,7 @@
     - { role: fish, when: 'ansible_os_family == "Darwin"' }
     - { role: anyenv, when: 'ansible_os_family == "Darwin"'}
     - { role: pyenv, when: 'ansible_os_family == "Darwin"'}
+    - { role: goenv, when: 'ansible_os_family == "Darwin"'}
     - { role: nvim, when: 'ansible_os_family == "Darwin"'}
     - { role: macos, when: 'ansible_os_family == "Darwin"' }
 
