use block directive

--- a/roles/anyenv/tasks/main.yml
+++ b/roles/anyenv/tasks/main.yml
@@ -1,25 +1,27 @@
-- name: Obtain path to fish
-  shell: which fish
-  register: fish_path
-  changed_when: false
-  check_mode: no
+- block:
+  - name: Obtain path to fish
+    shell: which fish
+    register: fish_path
+    changed_when: false
+    check_mode: no
 
-- name: Set ansible_shell_type to fish
-  set_fact:
-    ansible_shell_type: fish
-    ansible_shell_executable: '{{ fish_path.stdout }}'
+  - name: Set ansible_shell_type to fish
+    set_fact:
+      ansible_shell_type: fish
+      ansible_shell_executable: '{{ fish_path.stdout }}'
 
-- name: Place anyenv repository
-  git:
-    repo: https://github.com/riywo/anyenv.git
-    dest: ~/.anyenv
-    version: master
+  - name: Place anyenv repository
+    git:
+      repo: https://github.com/riywo/anyenv.git
+      dest: ~/.anyenv
+      version: master
 
-- name: Add init script of anyenv to config.fish
-  lineinfile:
-    dest: ~/.config/fish/config.fish
-    line: "{{ item }}"
-  with_items:
-    - set -x PATH $HOME/.anyenv/bin $PATH
-    - . (anyenv init - fish | psub)
+  - name: Add init script of anyenv to config.fish
+    lineinfile:
+      dest: ~/.config/fish/config.fish
+      line: "{{ item }}"
+    with_items:
+      - set -x PATH $HOME/.anyenv/bin $PATH
+      - . (anyenv init - fish | psub)
+  tags: anyenv_install
 
