--- a/roles/font/tasks/main.yml
+++ b/roles/font/tasks/main.yml
@@ -1,34 +1,39 @@
-- name: Create font dir
-  file:
-    path: ~/Documents/fonts
-    state: directory
+- block:
+  - name: Create font dir
+    file:
+      path: ~/Documents/fonts
+      state: directory
 
-- name: Download font
-  get_url:
-    url: '{{ item.url }}'
-    dest: '~/Documents/fonts/{{ item.name }}'
-  register: download_result
-  until: download_result is succeeded
-  retries: 3
-  delay: 5
-  with_items:
-    - '{{ font_list }}'
-  vars:
-    ansible_python_interpreter: python3
+  - name: Download font
+    get_url:
+      url: '{{ item.url }}'
+      dest: '~/Documents/fonts/{{ item.name }}'
+    register: download_result
+    until: download_result is succeeded
+    retries: 3
+    delay: 5
+    with_items:
+      - '{{ font_list }}'
+    vars:
+      ansible_python_interpreter: python3
 
-- name: Unzip archive
-  unarchive:
-    src: '{{ item }}'
-    dest: '~/Documents/fonts/'
-    remote_src: yes
-  with_fileglob:
-    - ~/Documents/fonts/*.zip
+  - name: Unzip archive
+    unarchive:
+      src: '{{ item }}'
+      dest: '~/Documents/fonts/'
+      remote_src: yes
+    with_fileglob:
+      - ~/Documents/fonts/*.zip
 
-- name: Install font
-  copy:
-    src: '{{ item.src }}'
-    dest: ~/Library/Fonts
-  when: '".otf" in item.path or ".ttf" in item.path'
-  with_filetree:
-    - ~/Documents/fonts/
+  tags: font_download
 
+- block:
+  - name: Install font
+    copy:
+      src: '{{ item.src }}'
+      dest: ~/Library/Fonts
+    when: '".otf" in item.path or ".ttf" in item.path'
+    with_filetree:
+      - ~/Documents/fonts/
+
+  tags: font_install
