--- a/roles/git/tasks/main.yml
+++ b/roles/git/tasks/main.yml
@@ -1,22 +1,25 @@
-- name: Set git config user.name
-  git_config:
-    name: user.name
-    scope: global
-    value: '{{ github_user_display }}'
+- block:
+  - name: Set git config user.name
+    git_config:
+      name: user.name
+      scope: global
+      value: '{{ github_user_display }}'
 
-- name: Set git config user.email
-  git_config:
-    name: user.email
-    scope: global
-    value: '{{ github_email }}'
+  - name: Set git config user.email
+    git_config:
+      name: user.email
+      scope: global
+      value: '{{ github_email }}'
 
-- name: Set other config
-  blockinfile:
-    path: '{{ item.path }}'
-    block: |
-      {{ item.content }}
-    marker: "; {mark} : Insert by Ansible ( {{ item.name }} )"
-    backup: yes
-    create: yes
-  with_items:
-    - '{{ unsafe_git_configs }}'
+  - name: Set other config
+    blockinfile:
+      path: '{{ item.path }}'
+      block: |
+        {{ item.content }}
+      marker: "; {mark} : Insert by Ansible ( {{ item.name }} )"
+      backup: yes
+      create: yes
+    with_items:
+      - '{{ unsafe_git_configs }}'
+
+  tags: git_config
