--- a/roles/brew/tasks/main.yml
+++ b/roles/brew/tasks/main.yml
@@ -1,29 +1,39 @@
-- name: brew update
-  homebrew: update_homebrew=yes
+- block:
+  - name: brew update
+    homebrew: update_homebrew=yes
 
-- name: homebrewへtapリポジトリを追加
-  homebrew_tap:
-    name: '{{ item.name }}'
-    state: present
-  with_items:
-    - '{{ homebrew_taps }}'
+  tags: brew_update
 
-- name: brewパッケージのインストール
-  homebrew:
-    name={{ item.name }}
-    state={{ item.state | default('installed') }}
-    install_options={{
-      item.install_options | default('latest') | join(',')
-      if item.install_options is not string
-      else item.install_options
-    }}
-  with_items:
-    - '{{ homebrew_packages }}'
+- block:
+  - name: homebrewへtapリポジトリを追加
+    homebrew_tap:
+      name: '{{ item.name }}'
+      state: present
+    with_items:
+      - '{{ homebrew_taps }}'
 
-- name: brew caskパッケージのインストール
-  homebrew_cask:
-    name: '{{ item.name }}'
-    state: '{{ item.state|default("installed") }}'
-    accept_external_apps: True
-  with_items:
-    - '{{ homebrew_cask_packages }}'
+  - name: brewパッケージのインストール
+    homebrew:
+      name={{ item.name }}
+      state={{ item.state | default('installed') }}
+      install_options={{
+        item.install_options | default('latest') | join(',')
+        if item.install_options is not string
+        else item.install_options
+      }}
+    with_items:
+      - '{{ homebrew_packages }}'
+
+  tags: brew_packages_install
+
+- block:
+
+  - name: brew caskパッケージのインストール
+    homebrew_cask:
+      name: '{{ item.name }}'
+      state: '{{ item.state|default("installed") }}'
+      accept_external_apps: True
+    with_items:
+      - '{{ homebrew_cask_packages }}'
+
+  tags: cask_packages_install
