--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -1,15 +1,17 @@
-- name: git clone dotfiles
-  git:
-    repo: https://github.com/pddg/dotfiles
-    dest: '{{ dotfiles_repo }}'
-    update: no
+- block:
+  - name: git clone dotfiles
+    git:
+      repo: https://github.com/pddg/dotfiles
+      dest: '{{ dotfiles_repo }}'
+      update: no
 
-- name: Create symbolic link
-  file:
-    src: '{{ dotfiles_repo }}/{{ item }}'
-    dest: ~/{{ item }}
-    state: link
-    force: yes
-  with_items:
-    - '{{ dotfiles_list }}'
+  - name: Create symbolic link
+    file:
+      src: '{{ dotfiles_repo }}/{{ item }}'
+      dest: ~/{{ item }}
+      state: link
+      force: yes
+    with_items:
+      - '{{ dotfiles_list }}'
 
+  tags: dotfiles
