--- a/roles/pyenv/tasks/main.yml
+++ b/roles/pyenv/tasks/main.yml
@@ -1,31 +1,37 @@
-- name: Install pyenv
-  shell: anyenv install pyenv
-  args:
-    creates: ~/.anyenv/envs/pyenv/bin/pyenv
+- block:
+  - name: Install pyenv
+    shell: anyenv install pyenv
+    args:
+      creates: ~/.anyenv/envs/pyenv/bin/pyenv
 
-- name: Install pyenv-virtualenv
-  git:
-    repo: https://github.com/yyuu/pyenv-virtualenv.git
-    dest: ~/.anyenv/envs/pyenv/plugins/pyenv-virtualenv
-    version: master
+  - name: Install pyenv-virtualenv
+    git:
+      repo: https://github.com/yyuu/pyenv-virtualenv.git
+      dest: ~/.anyenv/envs/pyenv/plugins/pyenv-virtualenv
+      version: master
 
-- name: Obtain path to openssl (workaround for High Sierra)
-  shell: brew --prefix openssl
-  register: openssl_prefix
-  changed_when: false
-  check_mode: no
+  tags: pyenv_install
 
-- name: Install python
-  shell: pyenv install '{{ item.version }}'
-  args:
-    creates: '~/.anyenv/envs/pyenv/versions/{{ item.version }}'
-  environment:
-    PYTHON_CONFIGURE_OPTS: '{{ item.option }}'
-    CFLAGS: '-I{{ openssl_prefix.stdout }}/include'
-    LDFLAGS: '-L{{ openssl_prefix.stdout }}/lib'
-  with_items:
-    - '{{ python_versions }}'
-  when: python_versions is defined
-  notify:
-    - pyenv_rehash
+- block:
+  - name: Obtain path to openssl (workaround for High Sierra)
+    shell: brew --prefix openssl
+    register: openssl_prefix
+    changed_when: false
+    check_mode: no
+
+  - name: Install python
+    shell: pyenv install '{{ item.version }}'
+    args:
+      creates: '~/.anyenv/envs/pyenv/versions/{{ item.version }}'
+    environment:
+      PYTHON_CONFIGURE_OPTS: '{{ item.option }}'
+      CFLAGS: '-I{{ openssl_prefix.stdout }}/include'
+      LDFLAGS: '-L{{ openssl_prefix.stdout }}/lib'
+    with_items:
+      - '{{ python_versions }}'
+    when: python_versions is defined
+    notify:
+      - pyenv_rehash
+
+  tags: python_install
 
