--- a/roles/pyenv/tasks/main.yml
+++ b/roles/pyenv/tasks/main.yml
@@ -13,25 +13,11 @@
   tags: pyenv_install
 
 - block:
-  - name: Obtain path to openssl (workaround for High Sierra)
-    shell: brew --prefix openssl
-    register: openssl_prefix
-    changed_when: false
-    check_mode: no
+  - include_tasks: macos.yml
+    when: ansible_os_family == 'Darwin'
 
-  - name: Install python
-    shell: pyenv install '{{ item.version }}'
-    args:
-      creates: '~/.anyenv/envs/pyenv/versions/{{ item.version }}'
-    environment:
-      PYTHON_CONFIGURE_OPTS: '{{ item.option }}'
-      CFLAGS: '-I{{ openssl_prefix.stdout }}/include'
-      LDFLAGS: '-L{{ openssl_prefix.stdout }}/lib'
-    with_items:
-      - '{{ python_versions }}'
-    when: python_versions is defined
-    notify:
-      - pyenv_rehash
+  - include_tasks: ubuntu.yml
+    when: ansible_os_faily == 'Debian'
 
   tags: python_install
 
