--- a/roles/apt/tasks/main.yml
+++ b/roles/apt/tasks/main.yml
@@ -1,50 +1,55 @@
-- name: Obtain ubuntu code name
-  shell: lsb_release -cs
-  register: ubuntu_codename
-  changed_when: False
- 
-- name: Create apt list dir
-  file:
-    path: /etc/apt/sources.list.d
-    state: directory
-    owner: root
-  become: yes
- 
-- name: Add IIJ and JAIST server to apt list 
-  template:
-    src: 'templates/{{ item }}.list'
-    dest: '/etc/apt/sources.list.d/{{ item }}.list'
-    owner: root
-  become: yes
-  with_items:
-    - iij
-    - jaist
+- block:
+  - name: Obtain ubuntu code name
+    shell: lsb_release -cs
+    register: ubuntu_codename
+    changed_when: False
 
-- name: Apt update
-  apt:
-    update_cache: yes
-  become: yes
+  - name: Create apt list dir
+    file:
+      path: /etc/apt/sources.list.d
+      state: directory
+      owner: root
+    become: yes
 
-- name: Apt upgrade
-  apt:
-    upgrade: dist
-  become: yes
+  - name: Add IIJ and JAIST server to apt list
+    template:
+      src: 'templates/{{ item }}.list'
+      dest: '/etc/apt/sources.list.d/{{ item }}.list'
+      owner: root
+    become: yes
+    with_items:
+      - iij
+      - jaist
 
-- name: Install packages
-  apt:
-    name: '{{ item }}'
-    state: latest
-  with_items:
-    - '{{ apt_packages }}'
-  become: yes
+  tags: apt_add
 
-- name: Apt clean
-  apt:
-    autoclean: yes
-  become: yes
+- block:
+  - name: Apt update
+    apt:
+      update_cache: yes
+    become: yes
 
-- name: Remove unnecessary packages
-  apt:
-    autoremove: yes
-  become: yes
- 
+  - name: Apt upgrade
+    apt:
+      upgrade: dist
+    become: yes
+
+  - name: Install packages
+    apt:
+      name: '{{ item }}'
+      state: latest
+    with_items:
+      - '{{ apt_packages }}'
+    become: yes
+
+  - name: Apt clean
+    apt:
+      autoclean: yes
+    become: yes
+
+  - name: Remove unnecessary packages
+    apt:
+      autoremove: yes
+    become: yes
+  tags: apt_install
+
