--- a/roles/apt/vars/main.yml
+++ b/roles/apt/vars/main.yml
@@ -9,9 +9,12 @@ apt_packages:
   - g++
   - wget
   - make
+  - cmake
   - openssl
   - libssl-dev
   - libbz2-dev
   - libreadline-dev
   - libsqlite3-dev
   - zlib1g-dev
+  - libboost-all-dev
+  - libicu-dev
