--- a/roles/nvim/tasks/main.yml
+++ b/roles/nvim/tasks/main.yml
@@ -1,4 +1,13 @@
 - block:
+  - include_tasks: brew.yml
+    when: ansible_os_family == 'Darwin'
+
+  - include_tasks: apt.yml
+    when: ansible_os_family == 'Debian'
+
+  tags: nvim_install
+
+- block:
   - name: Create neovim config directory
     file:
       path: ~/.config/nvim
@@ -57,9 +66,12 @@
 
   - name: Install neovim module into neovim2 env
     pip:
-      name: neovim
-      version: '{{ nvim_module_version }}'
+      name: '{{ item }}'
+      extra_args: --upgrade
       virtualenv: ~/.anyenv/envs/pyenv/versions/neovim2
+    with_items:
+      - pip
+      - neovim
 
   tags: create_nvim2_env
 
@@ -83,8 +95,11 @@
 
   - name: Install neovim module into neovim3 env
     pip:
-      name: neovim
-      version: '{{ nvim_module_version }}'
+      name: '{{ item }}'
+      extra_args: --upgrade
       virtualenv: ~/.anyenv/envs/pyenv/versions/neovim3
+    with_items:
+      - pip
+      - neovim
 
   tags: create_nvim3_env
