--- a/roles/nvim/tasks/uninstall.yml
+++ b/roles/nvim/tasks/uninstall.yml
@@ -1,2 +1,4 @@
 - name: Uninstall env
   shell: pyenv uninstall '{{ python_env_ver }}'
+  args:
+    removes: '~/.anyenv/envs/pyenv/versions/{{ nvim_env_name }}'
