--- a/roles/fish/tasks/main.yml
+++ b/roles/fish/tasks/main.yml
@@ -20,15 +20,9 @@
       line: '{{ fish_path.stdout }}'
     become: yes
 
-  - name: Confirm current shell
-    shell: echo $SHELL
-    register: current_shell
-    changed_when: false
-    check_mode: no
-
   - name: Change default shell to fish
     shell: 'chsh -s {{ fish_path.stdout }}'
-    when: current_shell.stdout != fish_path.stdout
+    when: lookup('env', 'SHELL') != fish_path.stdout
     ignore_errors: True
     failed_when: False
 
