--- a/roles/nvim/tasks/brew.yml
+++ b/roles/nvim/tasks/brew.yml
@@ -5,12 +5,7 @@
 
 - name: Install neovim by brew
   homebrew:
-    name={{ item.name }}
-    state={{ item.state | default('installed') }}
-    install_options={{
-      item.install_options | default('latest') | join(',')
-      if item.install_options is not string
-      else item.install_options
-    }}
+    name: '{{ item }}'
+    install_options: latest
   with_items:
     - '{{ macos_nvim_depends }}'
