--- a/roles/fish/tasks/apt.yml
+++ b/roles/fish/tasks/apt.yml
@@ -2,9 +2,11 @@
   apt_repository:
     repo: ppa:fish-shell/release-2
     update_cache: yes
+  become: yes
 
 - name: Install fish by apt
   apt:
     name: '{{ item }}'
   with_items:
     - '{{ fish_dependencies }}'
+  become: yes
