--- a/roles/nvim/tasks/apt.yml
+++ b/roles/nvim/tasks/apt.yml
@@ -2,10 +2,11 @@
   apt_repository:
     repo: ppa:neovim-ppa/unstable
     update_cache: yes
+  become: yes
 
 - name: Install neovim by apt
   apt:
     name: '{{ item }}'
   with_items:
     - '{{ ubuntu_nvim_depends }}'
-
+  become: yes
