--- a/.travis.yml
+++ b/.travis.yml
@@ -40,5 +40,5 @@ before_install:
 
 script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ansible-lint exec.yml ; fi
-  - if [[ "$PYTHON_VER" == "3" ]]; then ansible-playbook exec.yml -e ansible_python_interpreter=$(which python3) --syntax-check ; else ansible-playbook exec.yml --syntax-check ; fi
+  - if [[ "$PYTHON_VER" == "3" ]]; then ansible-playbook exec.yml -e ansible_python_interpreter=$(which python3) --skip-tags "font,cask_packages_install,apt_install" ; else ansible-playbook exec.yml --skip-tags "font,cask_packages_install,apt_install" ; fi
 
