--- a/exec.yml
+++ b/exec.yml
@@ -14,6 +14,10 @@
       when: 'ansible_os_family == "Debian"'
       tags: apt
 
+    - name: tex
+      when: 'ansible_os_family == "Debian"'
+      tags: tex
+
     - name: install_brew
       when: 'ansible_os_family == "Darwin"'
       tags: install_brew
