--- a/exec.yml
+++ b/exec.yml
@@ -17,6 +17,9 @@
       when: 'ansible_os_family == "Debian"'
       tags: nvidia-docker
 
+    - name: xkeysnail
+      tags: xkeysnail
+
     - name: install_brew
       when: 'ansible_os_family == "Darwin"'
       tags: install_brew
